--- a/Views/BoSung/Index.cshtml
+++ b/Views/BoSung/Index.cshtml
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Đơn đặt mua / Hợp đồng</title>
-    <link rel="stylesheet" href="/css/acquisitions.css">
+    <link rel="stylesheet" href="/css/BoSung.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -1392,7 +1392,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="/js/acquistions.js"></script>
+    <script src="/js/BoSung.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 </body>
