--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 </a>
             </li>
             <li><a href="/"><i class="glyphicon glyphicon-home"></i> <span>Trang Chủ</span></a></li>
-            <li><a href="/admin/index"><i class="glyphicon glyphicon-list-alt"></i> <span>Quản trị hệ thống</span></a></li>
+            <li><a href="/QuanLy/index"><i class="glyphicon glyphicon-list-alt"></i> <span>Quản trị hệ thống</span></a></li>
 
             <li class="dropdown-submenu">
                 <a href="javascript:void(0);" class="submenu-toggle">
@@ -49,7 +49,7 @@
             </li>
 
             <li>
-                <a href="/Acquisitions/index">
+                <a href="/BoSung/index">
                     <i class="glyphicon glyphicon-plus-sign"></i>
                     <span>Bổ sung</span>
                 </a>
