--- a/Views/MuonTra/Index.cshtml
+++ b/Views/MuonTra/Index.cshtml
@@ -28,7 +28,7 @@
                     <table class="reader-table">
                         <thead>
                             <tr>
-                                <th>STT cua toi la Binh</th>
+                                <th>STT</th>
                                 <th>Mã số</th>
                                 <th>Họ và tên</th>
                                 <th>Địa điểm</th>
