--- a/Views/BoSung/Index.cshtml
+++ b/Views/BoSung/Index.cshtml
@@ -29,7 +29,7 @@
 
                 <!-- Sub-tab -->
                 <ul class="nav nav-tabs ">
-                    <li class="active"><a href="#lap_giahan_huy" data-toggle="tab">Lập đơn</a></li>
+                    <li class="active"><a href="#lap_giahan_huy" data-toggle="tab">Lập đơnn</a></li>
                     <li><a href="#chiphi" data-toggle="tab">Khai báo chi phí</a></li>
                     <li><a href="#doichieu" data-toggle="tab">Đối chiếu</a></li>
                     <li><a href="#nhacungcap" data-toggle="tab">Quản lý Nhà cung cấp</a></li>
