Thêm phần VỀ CHÚNG TÔI và THAM GIA CÙNG CHÚNG TÔi ở phần Trang chủ

--- a/Views/TrangChu/Index.cshtml
+++ b/Views/TrangChu/Index.cshtml
@@ -221,6 +221,26 @@
         </div>
     </div>
 
+    <!--==============VỀ CHÚNG TÔI=========================-->
+    <section class="about-us">
+        <div class="about-content">
+            <h2 class="section-title">Về Chúng Tôi</h2>
+
+            <p class="subtitle">Thực tập sinh 1 nỗ lực để <span class="highlight">kiến tạo tương lai</span> cho một Kỷ nguyên mới</p>
+            <p class="description">
+                Chúng tôi, nhóm Thực Tập 1 với tinh thần học hỏi và sáng tạo, nỗ lực không ngừng để góp phần vào cuộc cách mạng Chuyển đổi số Quốc gia.
+                Với trách nhiệm và cam kết, chúng tôi đồng hành cùng AlphaTek trong việc phát triển nền giáo dục hiện đại, hội nhập và xứng tầm với Kỷ Nguyên Vươn Mình của dân tộc.
+            </p>
+            <div class="about-btn">
+                <button class="btn-more">Xem thêm Về Dự Án</button>
+                <button class="btn-phone">0980 080 808</button>
+            </div>
+        </div>
+        <div class="about-image">
+            <img src="https://kynguyengroup.com/wp-content/uploads/2020/09/Teamwork.jpg" alt="About Us Image">
+        </div>
+    </section>
+
     <!-- ==================== TÍNH NĂNG NỔI BẬT ==================== -->
     <div class="features text-center">
         <h1 class="animated-title text-uppercase strong text-center"
@@ -254,5 +274,17 @@
             </div>
         </div>
     </div>
+    <!--===========THAM GIA CÙNG CHÚNG TÔI===========-->
+    <section id="newsletter" class="newsletter">
+        <div id="newsletter-content" class="newsletter-content">
+            <h2 id="newsletter-title" class="newsletter-title">Tham gia cùng chúng tôi</h2>
+            <p id="newsletter-description" class="newsletter-description">Tham gia ngay để không bỏ lỡ các tài liệu, sách mới cập nhật!</p>
+            <form id="newsletter-form" class="newsletter-form">
+                <input type="email" id="email-input" class="email-input" placeholder="Email Address" required />
+                <button type="submit" id="subscribe-btn" class="subscribe-btn">Subscribe</button>
+            </form>
+        </div>
+    </section>
+
 </body>
 </html>
